--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -25,8 +25,8 @@
         <a href="{{ site.github.zip_url }}" class="btn">Download .zip</a>
         <a href="{{ site.github.tar_url }}" class="btn">Download .tar.gz</a>
       {% endif %}
-        <a href="{{ site.url }}/{{ site.baseurl }}/#bio" class="btn">Bio</a>
-        <a href="{{ site.url }}/{{ site.baseurl }}/#projects" class="btn">Projects</a>
+        <a href="{{ site.absolute_url }}/#bio" class="btn">Bio</a>
+        <a href="{{ site.absolute_url }}/#projects" class="btn">Projects</a>
     </header>
 
     <main id="content" class="main-content" role="main">
