--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -27,6 +27,7 @@
       {% endif %}
         <a href="{{ site.baseurl }}/#bio" class="btn">Bio</a>
         <a href="{{ site.baseurl }}/#projects" class="btn">Projects</a>
+        <a href="{{ site.baseurl }}/cv" class="btn">CV</a>
     </header>
 
     <main id="content" class="main-content" role="main">
